feat: readme, execution fixes